navbar toggle issues on small device fixed

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -90,8 +90,7 @@
 
 .topnav a:hover,
 .dropdown:hover .dropbtn {
-    background-color: white;
-    color: black;
+    color: white;
 }
 
 .dropdown-content a:hover {
